ci: adapt k8s-e2e-ci for sks1.5

--- a/hack/kubesmartcluster_idc.yaml.tmpl
+++ b/hack/kubesmartcluster_idc.yaml.tmpl
@@ -22,7 +22,7 @@ spec:
       zbsVip: ""
     name: cloudtower
   clusterConfiguration:
-    customImageRegistry: registry.smtx.io/kubesmart
+    customImageRegistry: 192.168.69.168/sks
     kubernetes:
       controlPlane:
         clusterConfiguration:
